(add) Possibilité de retourner un array des icônes (fix) Alignement des icônes

--- a/assets/cerberus/less/iconic.less
+++ b/assets/cerberus/less/iconic.less
@@ -24,13 +24,11 @@
 			display: inline-block;
 			content: "";
 			width: 1em;
-			text-align: left;
-			position: relative;
-			top: 1px;
+			line-height: 100%;
 		}
 	}
 	i { font-style: normal }
-	.iconic-stroke:before { font-family: IconicStroke }
+	.iconic-stroke:before { #font #family .custom-sans-serif('IconicStroke') }
   
 	.iconic-aperture:before                 { content: "\e026" }
 	.iconic-aperture_alt:before             { content: "\e00c" }
